Update Bangalore Restaurants Analysis.ipynb

--- a/Bangalore Restaurants Analysis.ipynb
+++ b/Bangalore Restaurants Analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Bangalore Restaurants Analysis\n",
-    "  dataset cedit : Chanakya Vivek Kapoor, Machine Learning Researcher at DSC-VIT Gurugram     Haryana,India"
+    "  dataset credit : Chanakya Vivek Kapoor, Machine Learning Researcher at DSC-VIT Gurugram     Haryana,India"
    ]
   },
   {
